# ibemail

./: .gitignore  LICENCE  README.md  environment.yml  pyproject.toml
app/ibemail/: __init__.py  auth.py  bf_ibe.py  email.py  forms.py  models.py  pkg.py  weil_pairing.py
app/ibemail/static/: style.css
app/ibemail/templates/: base.html
app/ibemail/templates/auth/: login.html  register.html
app/ibemail/templates/email/: compose.html  inbox.html  sent_box.html  view_email.html
docs/: app.md  development.md
notebooks/: Weil_Pairing_IBE_Scheme_PublicFace.ipynb
src/: config.py  main.py  smtp.py
src/ibe/: bf_ibe.py  pkg.py
src/smime/: certificate.py  keygen.py  smime_message.py
