[tool.poetry]
name = "ibemail"
version = "1.0"
description = "Implémentation d'une messagerie basée sur l'IBE pour le PESTO cybersécurité 2024."
authors = [
    "Remy Tang <remy.tang@mines.org>",
    "Rodrigue Lazarus <rodrigue.lazarus@mines.org>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.21.0"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
certifi = "^2024.8.30"
cryptography = "^43.0.3"
aiosmtpd = "^1.4.6"
omegaconf = "^2.3.0"
tqdm = "^4.66.6"
flask = "^3.0.3"
flask-wtf = "^1.2.2"
bootstrap-flask = "^2.4.1"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
email-validator = "^2.2.0"
gunicorn = "^23.0.0"
waitress = "^3.0.1"
flask-mail = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.build.targets.wheel]
packages = ["src/"]